Fix broken links and minor layout issues

--- a/app/components/Projects/Projects.module.css
+++ b/app/components/Projects/Projects.module.css
@@ -46,4 +46,7 @@
   .maxWidthWrapper {
     padding: var(--padding-mobile);
   }
+  .wrapper h2 + p {
+    max-width: 100%;
+  }
 }
